--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -16,14 +16,14 @@
 [log]
 	mailmap = true
 [mailmap]
-	file = ./mailmap
+	file = {{ .chezmoi.homeDir }}/.config/git/mailmap
 {{- if lookPath "nvim" }}
 [include]
 	path = ./editor/nvim.gitconfig
 {{- else if lookPath "vim" }}
 	path = ./editor/vim.gitconfig
 {{- end }}
-{{- if and (lookPath "gpg") (.git.signingkey) }}
+{{- if (lookPath "gpg") }}
 [include]
 	path = ./gpg.gitconfig
 {{- end }}
