--- a/home/dot_config/git/gpg.gitconfig.tmpl
+++ b/home/dot_config/git/gpg.gitconfig.tmpl
@@ -1,5 +1,5 @@
 [user]
-	signingkey = {{ include (joinPath .chezmoi.homeDir ".ssh/id_ed25519.pub") }}
+	signingkey = {{ .git.signingkey | quote }}
 [commit]
 	gpgsign = true
 [gpg]
