fix(script): remove `--no-lock` from brew boundle

--- a/home/.chezmoiscripts/darwin/run_onchange_before_10-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_onchange_before_10-install-packages.sh.tmpl
@@ -39,7 +39,7 @@ brew="{{ $brew }}"
   "zen-browser"
 }}
 
-brew bundle --no-lock --file=/dev/stdin <<EOF
+brew bundle --file=/dev/stdin <<EOF
 {{ range ($brews | sortAlpha | uniq) -}}
 brew "{{ . }}"
 {{ end -}}
