feat(git): add a local config for git

--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -17,6 +17,8 @@
 	mailmap = true
 [mailmap]
 	file = {{ .chezmoi.homeDir }}/.config/git/mailmap
+[include]
+  path = ./local.gitconfig
 {{- if lookPath "nvim" }}
 [include]
 	path = ./editor/nvim.gitconfig
