feat(maa): use git instead libgit to udpate resource

--- a/home/dot_config/maa/cli.toml.tmpl
+++ b/home/dot_config/maa/cli.toml.tmpl
@@ -12,7 +12,7 @@ test_time = 0
 {{- end }}
 
 [resource]
-backend = "libgit2"
+backend = "git"
 
 [resource.remote]
 url = "git@github.com:MaaAssistantArknights/MaaResource.git"
