chore(cargo): use build to pass rustflags for all target

--- a/home/dot_cargo/config.toml.tmpl
+++ b/home/dot_cargo/config.toml.tmpl
@@ -18,8 +18,5 @@ lto = "fat"
 codegen-units = 1
 lto = "fat"
 
-[target.x86_64-unknown-linux-gnu]
-rustflags = ["-Ctarget-cpu=native"]
-
-[target.aarch64-apple-darwin]
+[build]
 rustflags = ["-Ctarget-cpu=native"]
