fix(scripts): wrong fish variable assignment

--- a/home/.chezmoiscripts/run_onchange_after_10-setup-fish.fish.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_10-setup-fish.fish.tmpl
@@ -71,7 +71,7 @@ if test (uname -s) = Darwin
     end
 end
 
-set -l brew = "$homebrew_prefix/bin/brew"
+set -l brew "$homebrew_prefix/bin/brew"
 if test -d $homebrew_prefix; and test -x $brew
     begin_section "Setting up Homebrew"
     set_Ux HOMEBREW_PREFIX ($brew --prefix)
