--- a/home/dot_zshenv.tmpl
+++ b/home/dot_zshenv.tmpl
@@ -1,7 +1,10 @@
+# Force some programs to use XDG_CONFIG_HOME
 export XDG_CONFIG_HOME=${XDG_CONFIG_HOME:-$HOME/.config}
-export ZDOTDIR=$XDG_CONFIG_HOME/zsh
 export WAKATIME_HOME=$XDG_CONFIG_HOME/wakatime
 export GNUPGHOME=$XDG_CONFIG_HOME/gnupg
+
+# Make zsh itself use XDG_CONFIG_HOME
+export ZDOTDIR=$XDG_CONFIG_HOME/zsh
 
 {{- if eq .chezmoi.os "darwin" }}
 {{-   $homebrew_prefix := "/opt/homebrew" }}
