--- a/home/.chezmoiscripts/run_onchange_before_10-install-brew-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_10-install-brew-packages.sh.tmpl
@@ -2,29 +2,17 @@
 
 set -eufo pipefail
 
-{{ $homebrew_prefix := "/home/linuxbrew/.linuxbrew" }}
-{{ if eq .chezmoi.os "darwin" }}
-{{ if eq .chezmoi.arch "arm64" }}
-{{   $homebrew_prefix = "/opt/homebrew" }}
-{{ else }}
-{{   $homebrew_prefix = "/usr/local" }}
-{{ end }}
-{{ end }}
-{{ $brew := joinPath $homebrew_prefix "bin/brew" }}
+{{ $brew := joinPath .mirrors.homebrew.prefix "bin/brew" }}
 
-{{ if .in_china }}
-# Use mirror to speed up installation if in China
-HOMEBREW_MIRROR_DOMAIN="https://mirrors.ustc.edu.cn"
-HOMEBREW_INSTALL_SCRIPT="$HOMEBREW_MIRROR_DOMAIN/misc/brew-install.sh"
-export HOMEBREW_BREW_GIT_REMOTE="$HOMEBREW_MIRROR_DOMAIN/brew.git"
-export HOMEBREW_BOTTLE_DOMAIN="$HOMEBREW_MIRROR_DOMAIN/homebrew-bottles"
-export HOMEBREW_API_DOMAIN="$HOMEBREW_MIRROR_DOMAIN/homebrew-bottles/api"
+{{ if .mirrors.enabled }}
+export HOMEBREW_BREW_GIT_REMOTE="{{ .mirrors.homebrew.git_remote }}"
+export HOMEBREW_API_DOMAIN="{{ .mirrors.homebrew.api_domain }}"
+export HOMEBREW_BOTTLE_DOMAIN="{{ .mirrors.homebrew.bottle_domain }}"
 {{ end }}
 
 {{ if and (eq .chezmoi.os "darwin") (not (isExecutable $brew)) }}
-echo "Homebrew is not installed. Installing at $homebrew_prefix"
-install_script=${HOMEBREW_INSTALL_SCRIPT:"https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh"}
-/bin/bash -c "$(curl -fsSL $install_script)"
+echo "Homebrew is not installed. Installing at {{ .mirrors.homebrew.prefix }}"
+/bin/bash -c "$(curl -fsSL {{ .mirrors.homebrew.install_script_url }})"
 {{ end }}
 
 {{ if isExecutable $brew }}
