--- a/home/.chezmoiexternal.toml.tmpl
+++ b/home/.chezmoiexternal.toml.tmpl
@@ -19,9 +19,11 @@ refreshPeriod = "168h"
 clone.args = ["--filter=blob:none"]
 pull.args = ["--ff-only"]
 
-[".config/Rime/rime-ice"]
+{{ if eq .chezmoi.os "darwin" -}}
+["Library/Rime/rime-ice"]
 type = "git-repo"
 url = "https://github.com/iDvel/rime-ice.git"
 refreshPeriod = "168h"
 clone.args = ["--filter=blob:none"]
 pull.args = ["--ff-only"]
+{{ end -}}
