--- a/home/dot_bashrc.tmpl
+++ b/home/dot_bashrc.tmpl
@@ -14,13 +14,13 @@ export XDG_CONFIG_HOME=${XDG_CONFIG_HOME:-$HOME/.config}
 export WAKATIME_HOME=$XDG_CONFIG_HOME/wakatime
 export GNUPGHOME=$XDG_CONFIG_HOME/gnupg
 
-{{- $brew := joinPath .mirrors.homebrew.prefix "bin/brew" }}
+{{- $brew := joinPath .homebrew.prefix "bin/brew" }}
 {{- if isExecutable $brew }}
   {{- output $brew "shellenv" "bash" }}
   {{- if .mirrors.enabled }}
-export HOMEBREW_BREW_GIT_REMOTE="{{ .mirrors.homebrew.git_remote }}"
-export HOMEBREW_API_DOMAIN="{{ .mirrors.homebrew.api_domain }}"
-export HOMEBREW_BOTTLE_DOMAIN="{{ .mirrors.homebrew.bottle_domain }}"
+export HOMEBREW_BREW_GIT_REMOTE="{{ .homebrew.git_remote }}"
+export HOMEBREW_API_DOMAIN="{{ .homebrew.api_domain }}"
+export HOMEBREW_BOTTLE_DOMAIN="{{ .homebrew.bottle_domain }}"
   {{- end }}
 {{- end }}
 
