--- a/home/dot_config/fish/conf.d/10-env.fish.tmpl
+++ b/home/dot_config/fish/conf.d/10-env.fish.tmpl
@@ -1,4 +1,4 @@
-{{ $brew_prefix := .mirrors.homebrew.prefix }}
+{{ $brew_prefix := .homebrew.prefix }}
 {{ $brew := joinPath $brew_prefix "bin/brew" }}
 {{ if isExecutable $brew -}}
   {{ output $brew "shellenv" "fish" }}
@@ -7,9 +7,9 @@
 brew_paths
   {{- end }}
   {{- if .mirrors.enabled }}
-set -gx HOMEBREW_BREW_GIT_REMOTE "{{ .mirrors.homebrew.git_remote }}"
-set -gx HOMEBREW_API_DOMAIN "{{ .mirrors.homebrew.api_domain }}"
-set -gx HOMEBREW_BOTTLE_DOMAIN "{{ .mirrors.homebrew.bottle_domain }}"
+set -gx HOMEBREW_BREW_GIT_REMOTE "{{ .homebrew.git_remote }}"
+set -gx HOMEBREW_API_DOMAIN "{{ .homebrew.api_domain }}"
+set -gx HOMEBREW_BOTTLE_DOMAIN "{{ .homebrew.bottle_domain }}"
   {{- end }}
 {{- end }}
 
