atuin: use tailscale IP for sync server

--- a/home/dot_config/atuin/config.toml.tmpl
+++ b/home/dot_config/atuin/config.toml.tmpl
@@ -34,7 +34,7 @@
 {{- if eq .chezmoi.hostname "Loongs-Mac-mini" }}
 sync_address = "http://127.0.0.1:8888"
 {{- else }}
-sync_address = "http://loongs-mac-mini.tail6e3cda.ts.net:8888"
+sync_address = "http://100.123.246.81:8888"
 {{- end }}
 
 ## how often to sync history. note that this is only triggered when a command
